--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,6 +2,6 @@ sphinx>=2.2.0
 sphinx-rtd-theme>=0.4.3
 nettoolkit>=0.0.8
 pandas>=0.25.0
-pywin32>=224
+pypiwin32
 PySimpleGUI>=4.0.0
 numpy>=1.21.0
